# app_json_file_cache

./: .travis.yml  LICENSE  README.rst  pyproject.toml  release.sh  setup.py
.github/workflows/: test.yaml
app_json_file_cache/: __init__.py  app_cache.py  data_cache.py  function_cache.py  test_basics.py  test_default_function.py
xdg_json_cache/: __init__.py  test_basics.py
